--- a/InspectGPSDLL/InspectGPSDLL.csproj
+++ b/InspectGPSDLL/InspectGPSDLL.csproj
@@ -67,6 +67,7 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
       <DependentUpon>Settings.settings</DependentUpon>
     </Compile>
+    <Compile Include="Settings.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
